--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
 	"axios": "^0.22.0",
     "discord.js": "^13.1.0",
+	"common-tags": "^1.8.0",
+	"snakecord": "^1.0.9",
     "moment": "^2.29.1",
 	"cheerio": "^1.0.0-rc.10",
 	"moment": "^2.29.1",
