--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"axios": "^0.22.0",
     "discord.js": "^13.1.0",
 	"common-tags": "^1.8.0",
-	"snakecord": "^1.0.9",
+	"canvacord": "^5.2.3",
     "moment": "^2.29.1",
 	"cheerio": "^1.0.0-rc.10",
 	"moment": "^2.29.1",
