--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 	"axios": "^0.22.0",
     "discord.js": "^13.1.0",
 	"common-tags": "^1.8.0",
-	"os-utils": "0.0.14",
+	"os-utils": "^0.0.14",
+    "nekos.life": "^2.0.7",
 	"node-os-utils": "^1.3.5",
 	"canvacord": "^5.2.3",
     "moment": "^2.29.1",
