--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"common-tags": "^1.8.0",
 	"os-utils": "^0.0.14",
     "nekos.life": "^2.0.7",
+	"figlet": "^1.5.2",
 	"node-os-utils": "^1.3.5",
 	"canvacord": "^5.2.3",
     "moment": "^2.29.1",
